# Offboard-CPP-code-controlling-drones-motion-simulated-in-PX4-Software-in-the-loop-simulation

./: README.md
offboard/: CMakeLists.txt  package.xml
offboard/launch/: record_data.launch  total_launch.launch
offboard/src/: offboard_example.cpp
